Added additional filtering to searchTrips endpoint along with some basic tests and documentation
