# docs/swagger.yaml
@@ -43,8 +43,6 @@ paths:
         - $ref: '#/components/parameters/order'
         - $ref: '#/components/parameters/orderBy'
         - $ref: '#/components/parameters/pageNumber'
-        - $ref: '#/components/parameters/filterBy'
-        - $ref: '#/components/parameters/query'
       requestBody:
         description: Parameters to filter search
         content:
@@ -85,12 +83,6 @@ components:
       schema:
         type: string
         example: '1'
-    filterBy:
-      name: filterBy
-      in: query
-      description: the column to filter by
-      schema:
-        type: string
     itemsPerPage:
       name: itemsPerPage
       in: query
@@ -119,12 +111,6 @@ components:
       schema:
         type: string
         example: '1'
-    query:
-      name: query
-      in: query
-      description: the value to compare against
-      schema:
-        type: string
   schemas:
     Station:
       type: object
@@ -188,10 +174,18 @@ components:
       properties:
         localEndTimeLow:
           type: string
-          example: "06/04/2020"
+          example: "2019-04-01 00:00:00"
         localEndTimeHigh:
           type: string
-          example: "06/05/2020"
+          example: "2019-04-01 01:00:00"
+        riderAgeRanges:
+          type: string
+          description: comma separated list of rider age ranges, include "unknown" for missing age
+          example: "0-20,21-30,31-40,41-50,51+,unknown"
+        stationEndIds:
+          type: string
+          description: comma separated list of station IDs
+          example: "232,129,499,426"
     Trip:
       type: object
       properties:
