# src/requestHandlers/trips.ts
@@ -5,6 +5,7 @@ import { v4 as uuidv4 } from 'uuid';
 import { DATA_DIR, DATA_NAME } from '../constants';
 import { cacheTypes } from '../constants/cacheDetails';
 import cacheResponse from '../utilities/cacheResponse';
+import { findInRange, IFindInRangeArgs } from './helpers/dataSelection';
 
 const tripsCSVFilePath = path.join(DATA_DIR, `${DATA_NAME}.csv`);
 const tripsJSONFilePath = path.join(DATA_DIR, `${DATA_NAME}.json`);
@@ -14,20 +15,21 @@ const searchTrips = async (req, res) => {
   const {
     localEndTimeLow,
     localEndTimeHigh,
+    stationEndIds,
+    riderAgeRanges,
   } = req.body;
   const {
-    filterBy, // TODO
-    query,
-    order = 'asc', // TODO
-    orderBy, // TODO
+    order = 'asc',
+    orderBy,
   } = req.query;
   const itemsPerPage = Number(req.query.itemsPerPage);
   const pageNumber = Number(req.query.pageNumber);
+  let tripsJSONData;
 
   try {
+    // Parse and create JSON file
     if (!fs.existsSync(tripsJSONFilePath)) {
-      // Parse and create JSON file
-      const tripsJSON = await csv({
+      tripsJSONData = await csv({
         headers: [
           'trip_id',
           'local_start_time',
@@ -44,7 +46,7 @@ const searchTrips = async (req, res) => {
         ],
       }).fromFile(tripsCSVFilePath);
 
-      fs.writeFile(tripsJSONFilePath, JSON.stringify(tripsJSON), err => {
+      fs.writeFile(tripsJSONFilePath, JSON.stringify(tripsJSONData), err => {
         if (err) {
           return res.status(500).send({
             message: 'Failed to create JSON file',
@@ -55,36 +57,47 @@ const searchTrips = async (req, res) => {
       });
     }
 
-    const tripsJSON = JSON.parse(fs.readFileSync(path.join(DATA_DIR, `${DATA_NAME}.json`), { encoding: 'utf8' }));
+    tripsJSONData = JSON.parse(fs.readFileSync(path.join(DATA_DIR, `${DATA_NAME}.json`), { encoding: 'utf8' }));
 
-    const filtered = tripsJSON
-      .filter(trip => {
-        let valid = true;
-        if (localEndTimeLow) {
-          valid = new Date(trip.local_end_time) >= new Date(localEndTimeLow);
-        }
-        if (localEndTimeLow) {
-          valid = new Date(trip.local_end_time) < new Date(localEndTimeHigh);
-        }
-        return valid;
+    const filterArgs: IFindInRangeArgs = {
+      data: tripsJSONData,
+      order,
+      orderBy: orderBy || 'trip_id',
+    };
+    if (stationEndIds) {
+      filterArgs.filters = Object.assign(filterArgs.filters || {}, {
+        stationEndIds: stationEndIds.split(','),
       });
+    }
+    if (localEndTimeLow && localEndTimeHigh) {
+      filterArgs.filters = Object.assign(filterArgs.filters || {}, {
+        localEndTime: {
+          lowerBound: localEndTimeLow,
+          upperBound: localEndTimeHigh,
+        },
+      });
+    }
+    if (riderAgeRanges) {
+      filterArgs.filters = Object.assign(filterArgs.filters || {}, {
+        riderAgeRanges: riderAgeRanges.split(','),
+      });
+    }
+    const filteredTrips = findInRange(filterArgs);
 
-    const totalItems = filtered.length;
+    const totalItems = filteredTrips.length;
     const totalPages = Math.ceil(totalItems / itemsPerPage);
 
-    let paginatedResults = filtered;
+    let paginatedResults = filteredTrips;
 
     // Handle Pagination
     if (itemsPerPage && pageNumber) {
       const start = (pageNumber - 1) * itemsPerPage;
-      paginatedResults = filtered.slice(start, start + itemsPerPage);
+      paginatedResults = filteredTrips.slice(start, start + itemsPerPage);
     }
 
     const response = {
       pagination: {
-        filterBy,
         itemsPerPage,
-        query,
         order,
         orderBy,
         pageNumber,
@@ -97,10 +110,12 @@ const searchTrips = async (req, res) => {
     cacheResponse(req, response, cacheTypes.TRIPS, cacheKey);
 
     return res.status(200).send(response);
-  } catch {
+  } catch (err) {
+    console.log(err);
     return res.status(500).send({
       message: 'Error parsing trips data',
       statusCode: 500,
+      error: err.message,
     });
   }
 };
